fix(QF-4737): squash PinnedVersesBar and TajweedBar with sidebar navigation on desktop (#3036)
Fixes PinnedVersesBar and TajweedBar to properly squash when the sidebar navigation drawer opens on desktop, matching the behavior of the QuranReader content container.

--- a/src/components/QuranReader/TajweedBar/TajweedBar.module.scss
+++ b/src/components/QuranReader/TajweedBar/TajweedBar.module.scss
@@ -19,6 +19,13 @@ $pixel: 1px;
   z-index: var(--z-index-min);
 }
 
+.withSidebarNavigation {
+  @include breakpoints.tablet {
+    margin-inline-start: calc(10 * var(--spacing-mega));
+    inline-size: calc(100% - calc(10 * var(--spacing-mega)));
+  }
+}
+
 .hiddenContainer {
   transform: translateY(calc(-100% + var(--tajweed-trigger-height)));
 }
